[package]
name = "ratchat"
version = "0.1.0"
authors = ["Kouki Saito <dan.addr.skd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4"
tokio-stream = { version = "0.1.8", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = "1.1"
